# judah

./: .claudeignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.beat  Dockerfile.worker  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  railway.beat.toml  railway.toml  railway.worker.toml  run.ps1  run_checks.py  run_tests_local.py  skills-lock.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
.windsurf/rules/: main.md
apps/ai_agents/: admin.py  agent_os.py  api.py  apps.py  contracts.py  models.py  schemas.py  services.py  tasks.py
apps/analytics/: admin.py  api.py  apps.py  models.py  schemas.py  services.py  tasks.py
apps/auth_user/: admin.py  api.py  apps.py  models.py  schemas.py  services.py
apps/church/: admin.py  api.py  apps.py  models.py  schemas.py  services.py
apps/health/: api.py
apps/integrations/: apps.py
apps/knowledge/: admin.py  api.py  apps.py  models.py  schemas.py  services.py
apps/support/: admin.py  admin_api.py  agent_sync_service.py  api.py  apps.py  assignment_readiness.py  auto_assign_service.py  availability_runtime.py  conversation_cycle_service.py  durable_assignment_service.py  eligibility_service.py  legacy_cycle_backfill.py  legacy_cycle_profile.py  matchmaker_service.py  models.py  owned_cache_lock.py  queue_service.py  sat_service.py  schemas.py  services.py  tasks.py
apps/webhooks/: admin.py  api.py  apps.py  models.py  schemas.py  services.py  signatures.py  tasks.py
common/: cache.py  circuit_breaker.py  database_safety.py  exceptions.py  idempotency.py  logging.py  middleware.py  pagination.py  permissions.py  rate_limit.py  utils.py
common/tests/: test_cache.py  test_circuit_breaker.py  test_database_safety.py  test_exceptions.py  test_logging.py  test_permissions.py  test_rate_limit.py  test_utils.py
core/: asgi.py  celery.py  urls.py  wsgi.py
core/settings/: __init__.py  base.py  development.py  production.py  staging.py  test.py
core/tests/: test_celery_startup.py  test_railway_config.py  test_run_checks.py  test_settings_environments.py  test_start_service.py
docs/: INDEX.md  README.md  REPORT.md  decisions_and_changes_log.md  deploy-railway-frontend-integration.md  judah_unification_plan.md  railway-celery-setup.md  technical-documentation.md
docs/ai/: README.md  agent-integrations-upgrade-plan.md  ai-context.md  codebase-map.md  maintenance-notes.md  module-index.md
docs/api/: README.md  authentication.md  endpoints.md  examples.md
docs/architecture/: data-flow.md  decisions.md  modules.md  overview.md  system-context.md
docs/business/: business-rules.md  domain-glossary.md  workflows.md
docs/contributing/: PR-checklist.md  README.md  code-style.md  commit-conventions.md  testing-guide.md
docs/database/: migrations.md  models.md  overview.md  relationships.md
docs/features/: auto_assignment_system.md
docs/operations/: README.md  absence-safe-assignment.md  deployment.md  logging.md  monitoring.md  rollback.md
docs/reports/: AUDIT_2026-04-22.md  relatorio_atribuicao_automatica_15-04-2026_10h30.md  relatorio_atribuicao_automatica_15-04-2026_17h54.md
docs/security/: README.md  overview.md  recommendations.md  risks.md
docs/services/: README.md  ai_agents.md  analytics.md  auth_user.md  church.md  health.md  integrations.md  knowledge.md  support.md  (+2 more)
hubspot-app/: hsproject.json
inchurch-sandbox/: hsproject.json
requirements/: base.txt  dev.txt  test.txt
scripts/: simulate_hubspot_webhook.py  start_service.py  test_api_integration.py  test_hubspot_image_flow.py  test_mcp_validation.py  test_rag_pinecone_real.py  test_salomao_mcp.py
webapp/: .gitignore  README.md  package-lock.json  package.json  proxy.ts
(+334 files in other folders)
