[project]
name = "judah"
version = "1.0.0"
description = "JUDAH — Backend unificado da InChurch"
requires-python = ">=3.14"
license = {text = "Proprietary"}
authors = [
    {name = "InChurch Engineering Team"},
]

[tool.ruff]
target-version = "py314"
line-length = 120
src = ["apps", "core", "common"]
extend-exclude = ["scripts"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["RUF012", "N815", "E501"]
"core/settings/*.py" = ["F403", "F405"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "core", "common"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
# ruff 0.15.8 incorrectly tries to rewrite `except (A, B):` to Python 2 syntax
# in this file, so exclude it from formatting until the formatter is fixed.
exclude = ["apps/support/services.py"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.test"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["apps", "common", "core"]
addopts = "-v --tb=short --strict-markers -p no:warnings"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["apps", "common"]
omit = ["*/tests/*", "*/migrations/*"]

[tool.coverage.report]
# Verified local and CI floor; keep both runners aligned.
fail_under = 90
precision = 2
show_missing = true

[tool.mypy]
python_version = "3.14"
plugins = ["mypy_django_plugin.main"]
# Started permissive; the project target is strict type checking. Gradually
# remove disabled error codes as the codebase is annotated and stubs improve.
strict = false
ignore_missing_imports = true
show_error_codes = true
disable_error_code = [
    "var-annotated",
    "attr-defined",
    "import-untyped",
    # The following are temporarily disabled because the existing codebase
    # triggers many false positives with django-stubs / agno stubs. Re-enable
    # incrementally as annotations and stubs improve.
    "assignment",
    "arg-type",
    "return-value",
    "union-attr",
    "misc",
    "call-arg",
    "no-redef",
    "operator",
    "call-overload",
]
exclude = [
    "^\\.venv/",
    "^venv/",
    "^scripts/",
    "^webapp/",
    "^manage\\.py$",
    "^run_.*\\.py$",
]

[tool.django-stubs]
django_settings_module = "core.settings.test"
